--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Project-specific ignores
+api_key.txt
+*.ipynb
+.ipynb_checkpoints/
+data/
+cache/
+*.png
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -158,3 +166,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/.idea/.gitignore
+/.idea/AQI-comparison.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
