Testing tunnel covering

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,32 @@ cython_debug/
 /map/station_list_2023_SF.csv
 /map/distances_2023_temp.csv
 /map/station_distance-2023-SF-missing.csv
+/2023-1curve-SEA.jpg
+/2023-1curve-SF.jpg
+/2023-2curve-SEA.jpg
+/2023-2curve-SF.jpg
+/2023-3curve-SEA.jpg
+/2023-3curve-SF.jpg
+/2023-4curve-SEA.jpg
+/2023-4curve-SF.jpg
+/2023-5curve-SEA.jpg
+/2023-5curve-SF.jpg
+/2023-6curve-SEA.jpg
+/2023-6curve-SF.jpg
+/2023-7curve-SEA.jpg
+/2023-7curve-SF.jpg
+/2023-8curve-SEA.jpg
+/2023-8curve-SF.jpg
+/2023-9curve-SEA.jpg
+/2023-9curve-SF.jpg
+/2023-10curve-SEA.jpg
+/2023-10curve-SF.jpg
+/2023-11curve-SEA.jpg
+/2023-11curve-SF.jpg
+/2023-12curve-SEA.jpg
+/2023-12curve-SF.jpg
+/2023-curve-SEA.jpg
+/2023-curve-SF.jpg
+/2023-tunnelpm2-5-SEA.jpg
+/2023-tunnelpm10-SEA.jpg
+/map/station_list_2023_alaskan-way-tunnel.csv
