Heatmaps for number of days above CA safe standard for pm10

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,4 @@ cython_debug/
 /2023-tunnelpm2-5-SEA.jpg
 /2023-tunnelpm10-SEA.jpg
 /map/station_list_2023_alaskan-way-tunnel.csv
+/alaskan-way-1-viaduct-close-pm10-SEA.jpg
